# trustheim

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
crates/trustheim-api/: Cargo.toml
crates/trustheim-api-server/: Cargo.toml
crates/trustheim-api-server/src/: lib.rs  main.rs
crates/trustheim-api/src/: lib.rs
crates/trustheim-backend/: Cargo.toml
crates/trustheim-backend-openbao/: Cargo.toml
crates/trustheim-backend-openbao/src/: lib.rs
crates/trustheim-backend/src/: lib.rs
crates/trustheim-cli/: Cargo.toml
crates/trustheim-cli/src/: main.rs
crates/trustheim-domain/: Cargo.toml
crates/trustheim-domain/src/: lib.rs
crates/trustheim-server/: Cargo.toml
crates/trustheim-server/src/: lib.rs  main.rs
crates/trustheim-web/: Cargo.toml
crates/trustheim-web/src/: main.rs
docs/: api.md  app-boundaries.md  architecture.md  backend-provider-interface.md  openbao-operations-plan.md  research-sources.md  security-and-release-gates.md  versioning-plan.md
docs/deploy/: native-binaries.md
docs/deploy/podman/: README.md
scripts/: checks.sh  smoke_api_local.sh  stable_release_gate.sh
