[package]
name = "trustheim-api-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
serde_json.workspace = true
tokio.workspace = true
trustheim-api.workspace = true
trustheim-backend.workspace = true
trustheim-domain.workspace = true
utoipa.workspace = true
