[package]
name = "trustheim-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
trustheim-domain.workspace = true
utoipa.workspace = true

[dev-dependencies]
tokio.workspace = true
